fixed overflow error

--- a/style.less
+++ b/style.less
@@ -69,6 +69,7 @@ a {
   //justify-content: space-between;
   padding:1em 1em;
   text-align: center;
+  overflow: auto;
 
   h1 {
     font-family:"Avenir Next LT W01 Bold";
@@ -83,7 +84,7 @@ a {
   }
 
   footer {
-    margin: 5em 0;
+    margin: 5em 0 0 0;
     p {
       font-size: 1.5em;
       margin-bottom: 1.3em
